@@ -34,6 +34,7 @@ ldns_lookup_table ldns_error_str[] = {
         { LDNS_STATUS_INVALID_TIME, "Conversion error, time encoding expected" },
         { LDNS_STATUS_NETWORK_ERR, "Could not send or receive, because of network error" },
         { LDNS_STATUS_ADDRESS_ERR, "Could not start AXFR, because of address error" },
+        { LDNS_STATUS_FILE_ERR, "Could not open the files" },
         { LDNS_STATUS_UNKNOWN_INET, "Uknown address family" },
         { LDNS_STATUS_NOT_IMPL, "This function is not implemented (yet), please notify the developers - or not..." },
 	{ LDNS_STATUS_NULL, "Supplied value pointer null" },
@@ -63,8 +64,8 @@ ldns_lookup_table ldns_error_str[] = {
 	{ LDNS_STATUS_SYNTAX_TYPE_ERR, "Syntax error, could not parse the RR's type" },
 	{ LDNS_STATUS_SYNTAX_CLASS_ERR, "Syntax error, could not parse the RR's class" },
 	{ LDNS_STATUS_SYNTAX_TTL_ERR, "Syntax error, could not parse the RR's TTL" },
-	{ LDNS_STATUS_SYNTAX_TTL_ERR, "Syntax error, could not parse the RR's rdata" },
-	{ LDNS_STATUS_SYNTAX_TTL_ERR, "Syntax error, could not parse the RR's dname(s)" },
+	{ LDNS_STATUS_SYNTAX_RDATA_ERR, "Syntax error, could not parse the RR's rdata" },
+	{ LDNS_STATUS_SYNTAX_DNAME_ERR, "Syntax error, could not parse the RR's dname(s)" },
 	{ LDNS_STATUS_SYNTAX_VERSION_ERR, "Syntax error, version mismatch" },
 	{ LDNS_STATUS_SYNTAX_ALG_ERR, "Syntax error, algorithm unknown or non parseable" },
 	{ LDNS_STATUS_SYNTAX_ERR, "Syntax error, could not parse the RR" },
