@@ -38,6 +38,7 @@ enum ldns_enum_status
 	LDNS_STATUS_INVALID_TIME,
 	LDNS_STATUS_NETWORK_ERR,
 	LDNS_STATUS_ADDRESS_ERR,
+	LDNS_STATUS_FILE_ERR,
 	LDNS_STATUS_UNKNOWN_INET,
 	LDNS_STATUS_NOT_IMPL,
 	LDNS_STATUS_NULL,
@@ -71,6 +72,7 @@ enum ldns_enum_status
         LDNS_STATUS_SYNTAX_DNAME_ERR,
         LDNS_STATUS_SYNTAX_VERSION_ERR,
         LDNS_STATUS_SYNTAX_ALG_ERR,
+        LDNS_STATUS_SYNTAX_KEYWORD_ERR,
         LDNS_STATUS_SYNTAX_ERR
 };
 typedef enum ldns_enum_status ldns_status;
